# peridigm

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeLists.txt.pditi  CONTRIBUTING.md  Dockerfile  InstallingThirdPartyLibs.md  LICENSE.md  README.md  cmake_symlinks.py  mirror.py
bond_volume/: CMakeLists.txt  bond_volume_calculator.h
bond_volume/quick_grid/: CMakeLists.txt  calculators.cxx  calculators.h
io/: CMakeLists.txt  Field.cxx  Field.h  PdBondFilter.cxx  PdBondFilter.h  PdGridData.h  PdNeighborhood.cxx  PdNeighborhood.h  PdQuickGrid.cxx  PdQuickGrid.h  PdQuickGridParallel.cxx  PdQuickGridParallel.h  PdVTK.cxx  PdVTK.h  PdZoltan.cxx  PdZoltan.h  Pd_shared_ptr_Array.h  PdutMpiFixture.h  VectorUtils.h
io/mesh_output/: CMakeLists.txt
io/pdneigh/: BondFilter.cxx  BondFilter.h  NeighborhoodList.cxx  NeighborhoodList.h  OverlapDistributor.h  PdZoltan.cxx  PdZoltan.h
io/unitTest/: CMakeLists.txt  utFinitePlaneFilter.cxx  utPdNeighborhoodList.cxx  utPdNeighborhoodProcessorFrame.cxx  utPdNeighborhoodSort.cxx  utPdQ2CylinderRingHorizon.cxx  utPdQuickGridHorizon.cxx  utPdQuickGridMPI_np2_3x3x2.cxx  utPdQuickGridMPI_np3.cxx  utPdQuickGrid_loadBal_np2_3x1x1.cxx  utPdQuickGrid_loadBal_np2_4x4x4.cxx  utPdQuickGrid_loadBal_np8_4x4x4.cxx  utPdQuickGrid_solidCylinder_np1.cxx  utPdQuickGrid_solidCylinder_np2.cxx  utPdSmallMeshCylinder.cxx  utPdSmallMeshCylinder_np4.cxx  utPdVtkKdTree.cxx  utPdVtkPlane.cxx  utPd_Y-Z_crack.cxx  utPd_Y-Z_crack_np4.cxx  utPd_axisAlignedBoundaryPoints.cxx  utPd_frameSet_2x2x1_np4.cxx  utReloadBalance_np4.cxx  utVTK_ParallelReaderDemo.cxx  utVTK_ioExample_np4.cxx  utZoltanQuery_packUnpackPointsMultiFunction.cxx  utZoltanQuery_pointSizeInBytes.cxx  vtkExodusReaderDemo.cxx
io/utilities/: Array.h  MemoryInclude.h  PointSet.h  Sortable.cxx  Sortable.h  Vector.h  Vector3D.h
pditi/: .project  CMakeLists.txt  cmake.pditi.sh  mirror.py
pditi/aliti/: CMakeLists.txt  Mag2D_Operator.C  Mag2D_Operator.h  quadrulator.C  quadrulator.h  utQuadrulator.cxx
pditi/intrepid/: CMakeLists.txt  FIFE_2D_IntrepidQuadrature.C  FIFE_2D_IntrepidQuadrature.h
pditi/mesh_input/: CMakeLists.txt
pditi/operators/: BodyLoadSpec.cxx  BodyLoadSpec.h  CMakeLists.txt  ComponentDirichletBcSpec.cxx  ComponentDirichletBcSpec.h  ConstitutiveModel.h  DirichletBcSpec.h  ImplicitDynamicsIntegrator.cxx  ImplicitDynamicsIntegrator.h  ImplicitLinearDynamicsIntegrator.cxx  ImplicitLinearDynamicsIntegrator.h  IsotropicElastic.h  IsotropicElasticConstitutiveModel.cxx  IsotropicElasticConstitutiveModel.h  IsotropicElasticPlasticModel.cxx  IsotropicElasticPlasticModel.h  IsotropicElastic_No_DSF.cxx  IsotropicElastic_No_DSF.h  Loader.h  NewmarkBetaIntegrator.cxx  NewmarkBetaIntegrator.h  PdITI_Field.cxx  PdITI_Field.h  PdITI_Operator.cxx  PdITI_Operator.h  PdITI_Utilities.cxx  PdITI_Utilities.h  PdImpMaterials.h  PdImpMpiFixture.h  PdImpOperator.cxx  PdImpOperator.h  PdImpOperatorUtilities.cxx  PdImpOperatorUtilities.h  Property.h  RowStiffnessOperator.h  Stage.h  StageComponentDirichletBc.cxx  StageComponentDirichletBc.h  StageDirichletBc.h  StageFunction.h  (+1 more)
pditi/pdneigh/: BondFilter.cxx  BondFilter.h  CMakeLists.txt  NeighborhoodList.cxx  NeighborhoodList.h  OverlapDistributor.h  PdZoltan.cxx  PdZoltan.h
pditi/utilities/: Array.h  CMakeLists.txt  Sortable.cxx  Sortable.h  Vector.h
src/: CMakeLists.txt  ENAT_RythmosSolver.cpp  ENAT_RythmosSolver.hpp  PHAL_Dimension.cpp  PHAL_Dimension.hpp  PHAL_FactoryTraits.hpp  PHAL_PeridigmTraits.cpp  PHAL_PeridigmTraits.hpp  PHAL_Workset.hpp  Peridigm.cpp  Peridigm.hpp  PeridigmConfig.cmake.in  Peridigm_AbstractDiscretization.cpp  Peridigm_AbstractDiscretization.hpp  Peridigm_Block.cpp  Peridigm_Block.hpp  Peridigm_ComputeManager.cpp  Peridigm_ComputeManager.hpp  Peridigm_DataManager.cpp  Peridigm_DataManager.hpp  Peridigm_DenseMatrix.cpp  Peridigm_DenseMatrix.hpp  Peridigm_DiscretizationFactory.cpp  Peridigm_DiscretizationFactory.hpp  Peridigm_Factory.cpp  Peridigm_Factory.hpp  Peridigm_Main.cpp  Peridigm_ModelEvaluator.cpp  Peridigm_ModelEvaluator.hpp  Peridigm_NeighborhoodData.hpp  Peridigm_OutputManager.hpp  Peridigm_OutputManager_VTK_XML.cpp  Peridigm_OutputManager_VTK_XML.hpp  Peridigm_PdQuickGridDiscretization.cpp  Peridigm_PdQuickGridDiscretization.hpp  Peridigm_RythmosObserver.cpp  Peridigm_RythmosObserver.hpp  Peridigm_STKDiscretization.cpp  Peridigm_STKDiscretization.hpp  Peridigm_ScratchMatrix.hpp  (+21 more)
src/api/: Peridigm_API.cpp  Peridigm_API.hpp
src/compute/: CMakeLists.txt  Peridigm_Compute.hpp  Peridigm_Compute_ACCEL3D.cpp  Peridigm_Compute_ACCEL3D.hpp  Peridigm_Compute_Acceleration.cpp  Peridigm_Compute_Acceleration.hpp  Peridigm_Compute_Angular_Momentum.cpp  Peridigm_Compute_Angular_Momentum.hpp  Peridigm_Compute_Block_Data.cpp  Peridigm_Compute_Block_Data.hpp  Peridigm_Compute_Bond_Visualization.cpp  Peridigm_Compute_Bond_Visualization.hpp  Peridigm_Compute_Contact_Force.cpp  Peridigm_Compute_Contact_Force.hpp  Peridigm_Compute_Deformation_Gradient.cpp  Peridigm_Compute_Deformation_Gradient.hpp  Peridigm_Compute_Energy.cpp  Peridigm_Compute_Energy.hpp  Peridigm_Compute_Error.cpp  Peridigm_Compute_Error.hpp  Peridigm_Compute_Force.cpp  Peridigm_Compute_Force.hpp  Peridigm_Compute_Global_Angular_Momentum.cpp  Peridigm_Compute_Global_Angular_Momentum.hpp  Peridigm_Compute_Global_Kinetic_Energy.cpp  Peridigm_Compute_Global_Kinetic_Energy.hpp  Peridigm_Compute_Global_Linear_Momentum.cpp  Peridigm_Compute_Global_Linear_Momentum.hpp  Peridigm_Compute_Global_Strain_Energy.cpp  Peridigm_Compute_Global_Strain_Energy.hpp  Peridigm_Compute_Global_Strain_Energy_Density.cpp  Peridigm_Compute_Global_Strain_Energy_Density.hpp  Peridigm_Compute_Horizon.cpp  Peridigm_Compute_Horizon.hpp  Peridigm_Compute_JIntegral.cpp  Peridigm_Compute_JIntegral.hpp  Peridigm_Compute_Kinetic_Energy.cpp  Peridigm_Compute_Kinetic_Energy.hpp  Peridigm_Compute_Linear_Momentum.cpp  Peridigm_Compute_Linear_Momentum.hpp  (+34 more)
src/contact/: Peridigm_ContactModel.hpp  Peridigm_ContactModelFactory.cpp  (+5 more)
states/: CMakeLists.txt  CellArray.h  FieldData.h  FieldSpec.h  PdStates.cxx  State.h
(+3148 files in other folders)
